# pros-cli

./: .arcconfig  .arclint  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .unibeautifyrc.yml  Drawing1.vsdx  Jenkinsfile  LICENSE  MANIFEST.in  README.md  TRAINING.md  _constants.py  azure-pipelines.yml  build.py  config.ini  cross-platform-build.yml  install_requires.py  intercept-cc++.spec  pip_version  pom.xml  pros-macos.spec  pros.spec  pyproject.toml  requirements.txt  ruff.toml  serialShareClient.py  serialShareServer.py  setup.py  testclient.py  testserv.py  tox.ini  version  version.py  win_version
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflow/: cli-build.yml
.github/workflows/: codeql.yml  formatter.yml  lint-format.yml  main.yml  pre-commit.yml  pylint.yml
pros/: __init__.py  __main__.py
pros/autocomplete/: .pros-complete.bash  pros-complete.ps1  pros-complete.zsh  pros.fish
pros/cli/: __init__.py  branchline.py  build.py  click_classes.py  common.py  conductor.py  conductor_utils.py  hello_world.py  interactive.py  jinx.py  main.py  misc_commands.py  root.py  terminal.py  test.py  upload.py  user_script.py  v5_utils.py
pros/common/: __init__.py  cli_config.py  sentry.py  state.py  ui.py  upgrade.py  utils.py
pros/conductor/: __init__.py  conductor.py  depot_config.py  depots.md  project.py  project_config.py  transaction.py
pros/config/: __init__.py  cli_config.py  config.py
pros/ga/: analytics.json  (+2 more)
proscli/: __init__.py  build.py  conductor.py  conductor_management.py  config.py  create.py  flasher.py  main.py  serial_terminal.py  state.py  terminal.py  upgrade.py  utils.py
prosconductor/: __init__.py  config.py  create.py  dropins.py  fetch.py  loader.py  resolve.py  upgrade.py
prosconfig/: __init__.py  cliconfig.py
prosflasher/: __init__.py  bootloader.py  ports.py  upload.py
purdueros_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: azure-pipelines.yml  build.bat  build.ps1  build.sh  clean.ps1  clean.sh  install_build_dependencies.ps1  install_build_dependencies.sh
test/: project.pros  test_conductor.py
test-project2/: project.pros
(+302 files in other folders)
